fixing the text contrast

--- a/src/style.css
+++ b/src/style.css
@@ -35,10 +35,6 @@ a {
   color: var(--gentle-white);
 }
 
-.text-contrast > * {
-  color: var(--gentle-white);
-}
-
 .text-contrast > * > * {
   color: var(--gentle-white);
 }
